pilots/compiler/parser/PilotsParser.java
/* PilotsParser.java */
/* Generated By:JJTree&JavaCC: Do not edit this line. PilotsParser.java */
package pilots.compiler.parser;
import java.io.*;

public class PilotsParser/*@bgen(jjtree)*/implements PilotsParserTreeConstants, PilotsParserConstants {/*@bgen(jjtree)*/
  protected JJTPilotsParserState jjtree = new JJTPilotsParserState();

/**************************************/
/********** START OF GRAMMAR **********/
/**************************************/
/* Non-terminals */
  final public ASTPilots Pilots() throws ParseException {/*@bgen(jjtree) Pilots */
    ASTPilots jjtn000 = new ASTPilots(JJTPILOTS);
    boolean jjtc000 = true;
    jjtree.openNodeScope(jjtn000);Token t;
    try {
      jj_consume_token(PROGRAM_START);
      t = jj_consume_token(VAR);
jjtn000.jjtSetValue( t.image );
      jj_consume_token(61);
      jj_consume_token(INPUTS);
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case 61:{
        jj_consume_token(61);
        break;
        }
      default:
        jj_la1[1] = jj_gen;
        label_1:
        while (true) {
          switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
          case VAR:{
            ;
            break;
            }
          default:
            jj_la1[0] = jj_gen;
            break label_1;
          }
          Input();
        }
      }
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case CONSTANTS:{
        jj_consume_token(CONSTANTS);
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case 61:{
          jj_consume_token(61);
          break;
          }
        default:
          jj_la1[3] = jj_gen;
          label_2:
          while (true) {
            switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
            case VAR:{
              ;
              break;
              }
            default:
              jj_la1[2] = jj_gen;
              break label_2;
            }
            Constant();
          }
        }
        break;
        }
      default:
        jj_la1[4] = jj_gen;
        ;
      }
      jj_consume_token(OUTPUTS);
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case 61:{
        jj_consume_token(61);
        break;
        }
      default:
        jj_la1[6] = jj_gen;
        label_3:
        while (true) {
          switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
          case VAR:{
            ;
            break;
            }
          default:
            jj_la1[5] = jj_gen;
            break label_3;
          }
          Output();
        }
      }
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case ERRORS:{
        jj_consume_token(ERRORS);
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case 61:{
          jj_consume_token(61);
          break;
          }
        default:
          jj_la1[8] = jj_gen;
          label_4:
          while (true) {
            switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
            case VAR:{
              ;
              break;
              }
            default:
              jj_la1[7] = jj_gen;
              break label_4;
            }
            Error();
          }
        }
        break;
        }
      default:
        jj_la1[9] = jj_gen;
        ;
      }
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case SIGNATURES:{
        jj_consume_token(SIGNATURES);
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case 61:{
          jj_consume_token(61);
          break;
          }
        default:
          jj_la1[11] = jj_gen;
          label_5:
          while (true) {
            switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
            case VAR:{
              ;
              break;
              }
            default:
              jj_la1[10] = jj_gen;
              break label_5;
            }
            Signature();
          }
        }
        break;
        }
      default:
        jj_la1[12] = jj_gen;
        ;
      }
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case MODES:{
        jj_consume_token(MODES);
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case 61:{
          jj_consume_token(61);
          break;
          }
        default:
          jj_la1[14] = jj_gen;
          label_6:
          while (true) {
            switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
            case VAR:{
              ;
              break;
              }
            default:
              jj_la1[13] = jj_gen;
              break label_6;
            }
            Mode();
          }
        }
        break;
        }
      default:
        jj_la1[15] = jj_gen;
        ;
      }
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case CORRECTS:{
        jj_consume_token(CORRECTS);
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case 61:{
          jj_consume_token(61);
          break;
          }
        default:
          jj_la1[17] = jj_gen;
          label_7:
          while (true) {
            switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
            case VAR:{
              ;
              break;
              }
            default:
              jj_la1[16] = jj_gen;
              break label_7;
            }
            Correct();
          }
        }
        break;
        }
      default:
        jj_la1[18] = jj_gen;
        ;
      }
      jj_consume_token(PROGRAM_END);
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case 61:{
        jj_consume_token(61);
        break;
        }
      default:
        jj_la1[19] = jj_gen;
        ;
      }
jjtree.closeNodeScope(jjtn000, true);
      jjtc000 = false;
{if ("" != null) return jjtn000;}
    } catch (Throwable jjte000) {
if (jjtc000) {
        jjtree.clearNodeScope(jjtn000);
        jjtc000 = false;
      } else {
        jjtree.popNode();
      }
      if (jjte000 instanceof RuntimeException) {
        {if (true) throw (RuntimeException)jjte000;}
      }
      if (jjte000 instanceof ParseException) {
        {if (true) throw (ParseException)jjte000;}
      }
      {if (true) throw (Error)jjte000;}
    } finally {
if (jjtc000) {
        jjtree.closeNodeScope(jjtn000, true);
      }
    }
    throw new Error("Missing return statement in function");
}

  final public void Input() throws ParseException {/*@bgen(jjtree) Input */
    ASTInput jjtn000 = new ASTInput(JJTINPUT);
    boolean jjtc000 = true;
    jjtree.openNodeScope(jjtn000);String str;
    try {
      str = Vars();
jjtn000.jjtSetValue(str);
      Dim();
      jj_consume_token(USING);
      Methods();
      jj_consume_token(61);
    } catch (Throwable jjte000) {
if (jjtc000) {
        jjtree.clearNodeScope(jjtn000);
        jjtc000 = false;
      } else {
        jjtree.popNode();
      }
      if (jjte000 instanceof RuntimeException) {
        {if (true) throw (RuntimeException)jjte000;}
      }
      if (jjte000 instanceof ParseException) {
        {if (true) throw (ParseException)jjte000;}
      }
      {if (true) throw (Error)jjte000;}
    } finally {
if (jjtc000) {
        jjtree.closeNodeScope(jjtn000, true);
      }
    }
}

  final public void Constant() throws ParseException {/*@bgen(jjtree) Constant */
    ASTConstant jjtn000 = new ASTConstant(JJTCONSTANT);
    boolean jjtc000 = true;
    jjtree.openNodeScope(jjtn000);String str, exp;
    try {
      str = Vars();
      jj_consume_token(62);
      exp = Exp();
      jj_consume_token(61);
jjtree.closeNodeScope(jjtn000, true);
      jjtc000 = false;
jjtn000.jjtSetValue(str + ":" + exp);
    } catch (Throwable jjte000) {
if (jjtc000) {
        jjtree.clearNodeScope(jjtn000);
        jjtc000 = false;
      } else {
        jjtree.popNode();
      }
      if (jjte000 instanceof RuntimeException) {
        {if (true) throw (RuntimeException)jjte000;}
      }
      if (jjte000 instanceof ParseException) {
        {if (true) throw (ParseException)jjte000;}
      }
      {if (true) throw (Error)jjte000;}
    } finally {
if (jjtc000) {
        jjtree.closeNodeScope(jjtn000, true);
      }
    }
}

  final public void Output() throws ParseException {/*@bgen(jjtree) Output */
    ASTOutput jjtn000 = new ASTOutput(JJTOUTPUT);
    boolean jjtc000 = true;
    jjtree.openNodeScope(jjtn000);Token t;
    String str = null, exps = null, time;
    try {
      if (jj_2_1(2)) {
        t = jj_consume_token(VAR);
str = t.image;
        jj_consume_token(63);
        exps = Exp();
      } else {
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case VAR:{
          str = Vars();
          break;
          }
        default:
          jj_la1[20] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
      }
      jj_consume_token(AT);
      jj_consume_token(EVERY);
      time = Time();
      jj_consume_token(61);
jjtree.closeNodeScope(jjtn000, true);
      jjtc000 = false;
jjtn000.jjtSetValue(str + ":" + exps + ":" + time);
    } catch (Throwable jjte000) {
if (jjtc000) {
        jjtree.clearNodeScope(jjtn000);
        jjtc000 = false;
      } else {
        jjtree.popNode();
      }
      if (jjte000 instanceof RuntimeException) {
        {if (true) throw (RuntimeException)jjte000;}
      }
      if (jjte000 instanceof ParseException) {
        {if (true) throw (ParseException)jjte000;}
      }
      {if (true) throw (Error)jjte000;}
    } finally {
if (jjtc000) {
        jjtree.closeNodeScope(jjtn000, true);
      }
    }
}

  final public void Error() throws ParseException {/*@bgen(jjtree) Error */
    ASTError jjtn000 = new ASTError(JJTERROR);
    boolean jjtc000 = true;
    jjtree.openNodeScope(jjtn000);String str, exps;
    try {
      str = Vars();
      jj_consume_token(63);
      exps = Exps();
      jj_consume_token(61);
jjtree.closeNodeScope(jjtn000, true);
      jjtc000 = false;
jjtn000.jjtSetValue(str + ":" + exps);
    } catch (Throwable jjte000) {
if (jjtc000) {
        jjtree.clearNodeScope(jjtn000);
        jjtc000 = false;
      } else {
        jjtree.popNode();
      }
      if (jjte000 instanceof RuntimeException) {
        {if (true) throw (RuntimeException)jjte000;}
      }
      if (jjte000 instanceof ParseException) {
        {if (true) throw (ParseException)jjte000;}
      }
      {if (true) throw (Error)jjte000;}
    } finally {
if (jjtc000) {
        jjtree.closeNodeScope(jjtn000, true);
      }
    }
}

  final public void Signature() throws ParseException {/*@bgen(jjtree) Signature */
    ASTSignature jjtn000 = new ASTSignature(JJTSIGNATURE);
    boolean jjtc000 = true;
    jjtree.openNodeScope(jjtn000);String constant = "", exps;
    Token t1, t2, t3 = null;
    try {
      t1 = jj_consume_token(VAR);
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case LPAR:{
        constant = ConstInSignature();
        break;
        }
      default:
        jj_la1[21] = jj_gen;
        ;
      }
      jj_consume_token(63);
      t2 = jj_consume_token(VAR);
      jj_consume_token(62);
      exps = Exps();
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case STRING:{
        t3 = jj_consume_token(STRING);
        break;
        }
      default:
        jj_la1[22] = jj_gen;
        ;
      }
      label_8:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case ESTIMATE:{
          ;
          break;
          }
        default:
          jj_la1[23] = jj_gen;
          break label_8;
        }
        Estimate();
      }
      jj_consume_token(61);
jjtree.closeNodeScope(jjtn000, true);
      jjtc000 = false;
if (t3 != null) {
            jjtn000.jjtSetValue(t1.image + ":" + constant + ":" + t2.image + ":" + exps + ":" + t3.image);
        } else {
            jjtn000.jjtSetValue(t1.image + ":" + constant + ":" + t2.image + ":" + exps);
        }
    } catch (Throwable jjte000) {
if (jjtc000) {
        jjtree.clearNodeScope(jjtn000);
        jjtc000 = false;
      } else {
        jjtree.popNode();
      }
      if (jjte000 instanceof RuntimeException) {
        {if (true) throw (RuntimeException)jjte000;}
      }
      if (jjte000 instanceof ParseException) {
        {if (true) throw (ParseException)jjte000;}
      }
      {if (true) throw (Error)jjte000;}
    } finally {
if (jjtc000) {
        jjtree.closeNodeScope(jjtn000, true);
      }
    }
}

  final public void Mode() throws ParseException {/*@bgen(jjtree) Mode */
    ASTMode jjtn000 = new ASTMode(JJTMODE);
    boolean jjtc000 = true;
    jjtree.openNodeScope(jjtn000);String exps;
    Token t1, t2 = null;
    try {
      t1 = jj_consume_token(VAR);
      jj_consume_token(63);
      exps = Exps();
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case STRING:{
        t2 = jj_consume_token(STRING);
        break;
        }
      default:
        jj_la1[24] = jj_gen;
        ;
      }
      label_9:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case ESTIMATE:{
          ;
          break;
          }
        default:
          jj_la1[25] = jj_gen;
          break label_9;
        }
        Estimate();
      }
      jj_consume_token(61);
jjtree.closeNodeScope(jjtn000, true);
      jjtc000 = false;
if (t2 != null) {
            jjtn000.jjtSetValue(t1.image + ":" + exps + ":" + t2.image);
        } else {
            jjtn000.jjtSetValue(t1.image + ":" + exps);
        }
    } catch (Throwable jjte000) {
if (jjtc000) {
        jjtree.clearNodeScope(jjtn000);
        jjtc000 = false;
      } else {
        jjtree.popNode();
      }
      if (jjte000 instanceof RuntimeException) {
        {if (true) throw (RuntimeException)jjte000;}
      }
      if (jjte000 instanceof ParseException) {
        {if (true) throw (ParseException)jjte000;}
      }
      {if (true) throw (Error)jjte000;}
    } finally {
if (jjtc000) {
        jjtree.closeNodeScope(jjtn000, true);
      }
    }
}

  final public void Estimate() throws ParseException {/*@bgen(jjtree) Estimate */
    ASTEstimate jjtn000 = new ASTEstimate(JJTESTIMATE);
    boolean jjtc000 = true;
    jjtree.openNodeScope(jjtn000);String exp = "";
    Token t1;
    Token t2 = new Token();
    Token t3 = new Token();
    try {
      jj_consume_token(ESTIMATE);
      t1 = jj_consume_token(VAR);
      jj_consume_token(62);
      exp = Exp();
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case WHEN:{
        jj_consume_token(WHEN);
        t2 = jj_consume_token(VAR);
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case INTEGER:{
          t3 = jj_consume_token(INTEGER);
          jj_consume_token(TIMES);
          break;
          }
        default:
          jj_la1[26] = jj_gen;
          ;
        }
        break;
        }
      default:
        jj_la1[27] = jj_gen;
        ;
      }
jjtree.closeNodeScope(jjtn000, true);
      jjtc000 = false;
jjtn000.jjtSetValue(t1.image + ":" + t2.image + ":" + t3.image + ":" + exp);
    } catch (Throwable jjte000) {
if (jjtc000) {
        jjtree.clearNodeScope(jjtn000);
        jjtc000 = false;
      } else {
        jjtree.popNode();
      }
      if (jjte000 instanceof RuntimeException) {
        {if (true) throw (RuntimeException)jjte000;}
      }
      if (jjte000 instanceof ParseException) {
        {if (true) throw (ParseException)jjte000;}
      }
      {if (true) throw (Error)jjte000;}
    } finally {
if (jjtc000) {
        jjtree.closeNodeScope(jjtn000, true);
      }
    }
}

  final public void Correct() throws ParseException {/*@bgen(jjtree) Correct */
    ASTCorrect jjtn000 = new ASTCorrect(JJTCORRECT);
    boolean jjtc000 = true;
    jjtree.openNodeScope(jjtn000);String constant = null, exp;
    Token t1, t2;
    try {
      t1 = jj_consume_token(VAR);
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case LPAR:{
        constant = ConstInSignature();
        break;
        }
      default:
        jj_la1[28] = jj_gen;
        ;
      }
      jj_consume_token(63);
      t2 = jj_consume_token(VAR);
      jj_consume_token(62);
      exp = Exp();
      jj_consume_token(61);
jjtree.closeNodeScope(jjtn000, true);
      jjtc000 = false;
jjtn000.jjtSetValue(t1.image + ":" + constant + ":" + t2.image + ":" + exp);
    } catch (Throwable jjte000) {
if (jjtc000) {
        jjtree.clearNodeScope(jjtn000);
        jjtc000 = false;
      } else {
        jjtree.popNode();
      }
      if (jjte000 instanceof RuntimeException) {
        {if (true) throw (RuntimeException)jjte000;}
      }
      if (jjte000 instanceof ParseException) {
        {if (true) throw (ParseException)jjte000;}
      }
      {if (true) throw (Error)jjte000;}
    } finally {
if (jjtc000) {
        jjtree.closeNodeScope(jjtn000, true);
      }
    }
}

  final public String Vars() throws ParseException {/*@bgen(jjtree) Vars */
    ASTVars jjtn000 = new ASTVars(JJTVARS);
    boolean jjtc000 = true;
    jjtree.openNodeScope(jjtn000);Token t;
    String str;
    try {
      t = jj_consume_token(VAR);
str = t.image;
      label_10:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case COMMA:{
          ;
          break;
          }
        default:
          jj_la1[29] = jj_gen;
          break label_10;
        }
        jj_consume_token(COMMA);
        t = jj_consume_token(VAR);
str += "," + t.image;
      }
jjtree.closeNodeScope(jjtn000, true);
      jjtc000 = false;
{if ("" != null) return str;}
    } finally {
if (jjtc000) {
        jjtree.closeNodeScope(jjtn000, true);
      }
    }
    throw new Error("Missing return statement in function");
}

  final public String ConstInSignature() throws ParseException {/*@bgen(jjtree) ConstInSignature */
    ASTConstInSignature jjtn000 = new ASTConstInSignature(JJTCONSTINSIGNATURE);
    boolean jjtc000 = true;
    jjtree.openNodeScope(jjtn000);Token t;
    String str;
    try {
      jj_consume_token(LPAR);
      t = jj_consume_token(VAR);
str = t.image;
      jj_consume_token(RPAR);
jjtree.closeNodeScope(jjtn000, true);
      jjtc000 = false;
{if ("" != null) return str;}
    } finally {
if (jjtc000) {
        jjtree.closeNodeScope(jjtn000, true);
      }
    }
    throw new Error("Missing return statement in function");
}

  final public void Dim() throws ParseException {/*@bgen(jjtree) Dim */
  ASTDim jjtn000 = new ASTDim(JJTDIM);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      jj_consume_token(LPAR);
      Exps();
      jj_consume_token(RPAR);
    } catch (Throwable jjte000) {
if (jjtc000) {
        jjtree.clearNodeScope(jjtn000);
        jjtc000 = false;
      } else {
        jjtree.popNode();
      }
      if (jjte000 instanceof RuntimeException) {
        {if (true) throw (RuntimeException)jjte000;}
      }
      if (jjte000 instanceof ParseException) {
        {if (true) throw (ParseException)jjte000;}
      }
      {if (true) throw (Error)jjte000;}
    } finally {
if (jjtc000) {
        jjtree.closeNodeScope(jjtn000, true);
      }
    }
}

  final public void Method() throws ParseException {/*@bgen(jjtree) Method */
    ASTMethod jjtn000 = new ASTMethod(JJTMETHOD);
    boolean jjtc000 = true;
    jjtree.openNodeScope(jjtn000);Token t;
    String id, args;
    try {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case CLOSEST:{
        t = jj_consume_token(CLOSEST);
id = t.image;
        break;
        }
      case EUCLIDEAN:{
        t = jj_consume_token(EUCLIDEAN);
id = t.image;
        break;
        }
      case INTERPOLATE:{
        t = jj_consume_token(INTERPOLATE);
id = t.image;
        break;
        }
      case MODEL:{
        t = jj_consume_token(MODEL);
id = t.image;
        break;
        }
      default:
        jj_la1[30] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      jj_consume_token(LPAR);
      args = Exps();
      jj_consume_token(RPAR);
jjtree.closeNodeScope(jjtn000, true);
      jjtc000 = false;
jjtn000.jjtSetValue(id + ":" + args);
    } catch (Throwable jjte000) {
if (jjtc000) {
        jjtree.clearNodeScope(jjtn000);
        jjtc000 = false;
      } else {
        jjtree.popNode();
      }
      if (jjte000 instanceof RuntimeException) {
        {if (true) throw (RuntimeException)jjte000;}
      }
      if (jjte000 instanceof ParseException) {
        {if (true) throw (ParseException)jjte000;}
      }
      {if (true) throw (Error)jjte000;}
    } finally {
if (jjtc000) {
        jjtree.closeNodeScope(jjtn000, true);
      }
    }
}

  final public void Methods() throws ParseException {/*@bgen(jjtree) Methods */
  ASTMethods jjtn000 = new ASTMethods(JJTMETHODS);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      Method();
      label_11:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case COMMA:{
          ;
          break;
          }
        default:
          jj_la1[31] = jj_gen;
          break label_11;
        }
        jj_consume_token(COMMA);
        Method();
      }
    } catch (Throwable jjte000) {
if (jjtc000) {
        jjtree.clearNodeScope(jjtn000);
        jjtc000 = false;
      } else {
        jjtree.popNode();
      }
      if (jjte000 instanceof RuntimeException) {
        {if (true) throw (RuntimeException)jjte000;}
      }
      if (jjte000 instanceof ParseException) {
        {if (true) throw (ParseException)jjte000;}
      }
      {if (true) throw (Error)jjte000;}
    } finally {
if (jjtc000) {
        jjtree.closeNodeScope(jjtn000, true);
      }
    }
}
